Tue Sep 24 13:25:50 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Eliminate extra files not needed for Macintosh and
 		Windows.  (This directory is only used for Windows and
 		Macintosh at this point.)

Tue Sep 10 14:37:47 1996  Tom Yu  <tlyu@mit.edu>

	* krb5strings.M: remove extra args to .TH

Thu Jun 13 22:12:21 1996  Tom Yu  <tlyu@voltage-multiplier.mit.edu>

	* configure.in: remove ref to ET_RULES

Mon Jun 10 21:42:26 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* adm_conn.c:
	* adm_kw_dec.c:
	* adm_kw_enc.c: Change use of _WINDOWS to _MSDOS, and add check
		for _WIN32

Tue May 21 20:51:06 1996  Sam Hartman  <hartmans@mit.edu>

	* Makefile.in (check-unix):  Use KRB5_RUN_FLAGS

Sun May 12 00:46:57 1996  Marc Horowitz  <marc@mit.edu>

	* alt_prof.c (krb5_read_realm_params): added "acl_file" variable
 	for the admin server.

Wed Mar 13 17:37:00 1996  Ken Raeburn  <raeburn@cygnus.com>

	* configure.in: Use AC_HEADER_STDARG.

Sun Dec 10 11:02:56 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* str_conv.c (krb5_input_flag_to_string): Add new routine.

Wed Nov  8 02:46:54 1995  Theodore Y. Ts'o  <tytso@dcl>

	* alt_prof.c (krb5_free_realm_params): Free the realm_kdc_ports
		element of the structure.

Fri Oct  6 00:30:16 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Remove ##DOS!include of config/windows.in.
		config/windows.in is now included by wconfig.

	* logger.c (klog_vsyslog): Make the logs less verbose, by omitting
		the hostname, pid, etc. information.

Thu Oct  5 19:46:40 1995  Theodore Y. Ts'o  <tytso@dcl>

	* alt_prof.c (krb5_read_realm_params): Remove the profile
		relation, since it's really a bad idea.  Removed the
		"port" and "secondary_port" relations, and replaced them
		with the "kdc_port" relation, which takes a list of ports.

Mon Oct  2 15:08:53 1995  Theodore Y. Ts'o  <tytso@dcl>

	* logger.c (krb5_klog_init): If the log file can't be opened,
		print an intelligent error message.
